--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: KiSung's Blog # the main title
+title: Kisung's Blog # the main title
 
 tagline: 개발과 일상을 기록하는 블로그 # it will display as the subtitle
 
