--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: Kisung's Blog # the main title
 
-tagline: 개발과 일상을 기록하는 블로그 # it will display as the subtitle
+tagline: kisungsheen@gmail.com # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   연구, 일상, 신앙
